--- a/views/students/list.ejs
+++ b/views/students/list.ejs
@@ -23,7 +23,7 @@
                     <th>Email</th>
                     <th>Student Name</th>
                     <th>Old</th>
-                    <th>Edit</th>
+                    <th>Edit Page </th>
                     <th>Delete</th>
                 </tr>
 
