--- a/views/students/edit.ejs
+++ b/views/students/edit.ejs
@@ -23,7 +23,7 @@
                 </div>
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="floatingInput" placeholder="Name" name="name" value="<%= student.name %>">
-                    <label for="floatingInput">Name Student</label>
+                    <label for="floatingInput">Full Name Student</label>
                 </div>
                 <div class="form-floating">
                     <input type="text" class="form-control" id="floatingPassword" placeholder="Old" name="old" value="<%= student.old %>">
